Modify header styling; Modify first blog post

--- a/src/app.css
+++ b/src/app.css
@@ -136,6 +136,14 @@ li {
 	color: var(--text-1);
 }
 
+.prose :is(h1) {
+	font-size: var(--size-7);
+}
+
+.prose :is(h2) {
+	font-size: var(--size-5);
+}
+
 .prose :is(h2, h3, h4, h5, h6) {
 	margin-top: var(--size-8);
 	margin-bottom: var(--size-3);
